<resources>
    <string name="app_name">ListViewTaller</string>
    <string name="txtActivityMain_Titulo">Opciones</string>
    <string name="txtAreasOperaciones_Titulo">Areas</string>
    <string name="txtVolumenesOperaciones_Titulo">Volúmenes</string>
    <string name="txtOperacionesRealizadas_Titulo">Realizadas</string>

    <string name="opcionesPrincipales_Areas">Areas</string>
    <string name="opcionesPrincipales_Volumenes">Volúmenes</string>
    <string name="opcionesPrincipales_Operaciones">Operaciones realizadas</string>
    <string-array name="opcionesPrincipales">
        <item>@string/opcionesPrincipales_Areas</item>
        <item>@string/opcionesPrincipales_Volumenes</item>
        <item>@string/opcionesPrincipales_Operaciones</item>
    </string-array>

    <string name="opcionesAreas_Cuadrado">Cuadrado</string>
    <string name="opcionesAreas_Rectangulo">Rectángulo</string>
    <string name="opcionesAreas_Triangulo">Triángulo</string>
    <string name="opcionesAreas_Circulo">Círculo</string>
    <string-array name="opcionesAreas">
        <item>@string/opcionesAreas_Cuadrado</item>
        <item>@string/opcionesAreas_Rectangulo</item>
        <item>@string/opcionesAreas_Triangulo</item>
        <item>@string/opcionesAreas_Circulo</item>
    </string-array>

    <string name="opcionesVolumenes_Esfera">Esfera</string>
    <string name="opcionesVolumenes_Cilindro">Cilindro</string>
    <string name="opcionesVolumenes_Cono">Cono</string>
    <string name="opcionesVolumenes_Cubo">Cubo</string>
    <string-array name="opcionesVolumenes">
        <item>@string/opcionesVolumenes_Esfera</item>
        <item>@string/opcionesVolumenes_Cilindro</item>
        <item>@string/opcionesVolumenes_Cono</item>
        <item>@string/opcionesVolumenes_Cubo</item>
    </string-array>


    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpiar">Limpiar</string>

    <string name="error_CampoVacio">Campo vacio</string>
    <string name="error_CampoMenorCero">Campo menor y/o a 0</string>
    <string name="mensaje_guardado">Guardado</string>
    <string name="tabla_Operacion">Operación</string>
    <string name="tabla_Datos">Datos</string>
    <string name="tabla_Resultado">Resultado</string>

    <string name="txtCalcularCuadrado">Valor del Lado</string>
    <string name="guardar_AreaDelCuadrado">Area del Cuadrado</string>
    <string name="guardar_AreaDelRectangulo">Area del Rectangulo</string>
    <string name="guardar_AreaDelTriangulo">Area del Triangulo</string>
    <string name="guardar_AreaDelCirculo">Area del Circulo</string>
    <string name="guardar_VolumenEsfera">Volumen de Esfera</string>
    <string name="guardar_VolumenCilindro">Volumen de Cilindro</string>
    <string name="guardar_VolumenCono">Volumen del Cono</string>
    <string name="guardar_VolumenCubo">Volumen del Cubo</string>

    <string name="txtCalcularBase">Base</string>
    <string name="txtCalcularAltura">Altura</string>
    <string name="txtCalcularCirculo">Radio</string>
    <string name="txtCalcularArista">Arista</string>

</resources>
