<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OperacionesRealizadas">

    <TextView
        android:id="@+id/txtOperacionesRealizadas_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtOperacionesRealizadas_Titulo"
        android:textSize="18sp" />
    <TableLayout
        android:id="@+id/tblOperaciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N°"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_Operacion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_Datos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabla_Resultado"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>